# Swift-launcher

./: .gitignore  Cargo.toml  README.md  build.rs  calc_plugin.cwasm  dir_scanner.cwasm  flake.nix  plugin.wit
.github/workflows/: build.yml  clippy.yml
assets/: PKGBUILD  PLUGINS.md  WASM.md  swift-launcher.desktop
built_in_plugins/: calc_plugin.wasm  dir_scanner.wasm  web_search.wasm
modules/calc-plugin/: Cargo.toml
modules/calc-plugin/src/: bindings.rs  lib.rs
modules/dir-scanner/: Cargo.toml  build.sh
modules/dir-scanner/src/: lib.rs
modules/search/: Cargo.toml  build.sh
modules/search/src/: lib.rs
src/: config.rs  main.rs  plugins.rs  scraper.rs  theme.rs
ui/: app-window.slint  theme.slint
