[package]
name = "Swift-launcher"
version = "0.2.0"
edition = "2024"
authors = ["Marco Rodriguez marco@invrs.dev"]
description = "Fast, light and native launcher"
license = "GPLv3"

[dependencies]
slint = { version = "1.14.1", default-features = false, features = ["backend-qt", "renderer-software"] }
spell-framework = "1.0.1"
rust-ini = "0.21.3"
fuzzy-matcher = "0.3.7"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf"] }
wasmtime = { version = "40.0.2", default-features = false, features = ["cranelift", "runtime", "component-model"] }
wasmtime-wasi = { version = "40.0.2", default-features = false }
include_dir = "0.7.4"
wasmtime-wasi-http = "40.0.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
slint-build = "1.14.1"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }


[package.metadata.deb]
maintainer = "Marco Rodriguez marco@invrs.dev"
copyright = "2026, Marco Rodriguez"
depends = "libqt6core6, libqtgui6, libqt6widget6"
section = "utils"
priority = "optional"
assets = [
  ["target/release/Swift-launcher", "usr/bin/", "755"]
]

[package.metadata.generate-rpm]
license = "GPLv3"
assets = [
  { source = "target/release/Swift-launcher", dest = "/usr/bin/Swift-launcher", mode = "755" },
]
